public interface Appender {
    void append(LogEvent event);
}
